--- a/FoodCollector/PublicationEditorTVCDatePickerCustomCell.xib
+++ b/FoodCollector/PublicationEditorTVCDatePickerCustomCell.xib
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -10,11 +12,12 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="wcq-Ka-gQ2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
+                        <animations/>
                         <date key="date" timeIntervalSinceReferenceDate="461342120.16250002">
                             <!--2015-08-15 14:35:20 +0000-->
                         </date>
@@ -23,11 +26,23 @@
                         </connections>
                     </datePicker>
                 </subviews>
+                <animations/>
                 <constraints>
+                    <constraint firstAttribute="bottomMargin" secondItem="wcq-Ka-gQ2" secondAttribute="bottom" constant="-9" id="0Eo-06-SYC"/>
+                    <constraint firstItem="wcq-Ka-gQ2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="50W-rn-ufm"/>
                     <constraint firstAttribute="centerX" secondItem="wcq-Ka-gQ2" secondAttribute="centerX" id="CaU-QG-7Ev"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="wcq-Ka-gQ2" secondAttribute="trailing" constant="-8" id="VCt-4X-seU"/>
                     <constraint firstAttribute="centerY" secondItem="wcq-Ka-gQ2" secondAttribute="centerY" id="asV-Zp-F6k"/>
+                    <constraint firstItem="wcq-Ka-gQ2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="vhQ-5i-txP"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="CaU-QG-7Ev"/>
+                        <exclude reference="asV-Zp-F6k"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
+            <animations/>
             <connections>
                 <outlet property="cellDatePicker" destination="wcq-Ka-gQ2" id="LJi-10-pRe"/>
             </connections>
