--- a/FoodCollector/FCPublishAddressEditorAddressHistoryCustomHeaderView.xib
+++ b/FoodCollector/FCPublishAddressEditorAddressHistoryCustomHeaderView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -12,11 +12,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="חיפושים אחרונים" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yiO-IL-vCM">
-                    <rect key="frame" x="8" y="4" width="289" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Prevues searches" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yiO-IL-vCM">
+                    <rect key="frame" x="23" y="4" width="289" height="21"/>
                     <animations/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
@@ -24,8 +24,8 @@
             <color key="backgroundColor" red="0.84313725490196079" green="0.85098039215686272" blue="0.85490196078431369" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="yiO-IL-vCM" secondAttribute="bottom" constant="5" id="M4Y-mZ-AWX"/>
-                <constraint firstAttribute="trailing" secondItem="yiO-IL-vCM" secondAttribute="trailing" constant="23" id="Vzm-Ep-Kit"/>
-                <constraint firstItem="yiO-IL-vCM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="d8p-VS-bWV"/>
+                <constraint firstAttribute="trailing" secondItem="yiO-IL-vCM" secondAttribute="trailing" constant="8" id="Vzm-Ep-Kit"/>
+                <constraint firstItem="yiO-IL-vCM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" constant="15" id="d8p-VS-bWV"/>
                 <constraint firstItem="yiO-IL-vCM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="4" id="onF-7i-fKN"/>
                 <constraint firstAttribute="centerY" secondItem="yiO-IL-vCM" secondAttribute="centerY" id="tRr-hO-b2w"/>
             </constraints>
