--- a/FoodCollector/FCPublishAddressEditorMyLocationCustomCell.xib
+++ b/FoodCollector/FCPublishAddressEditorMyLocationCustomCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -11,26 +12,36 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="מיקום נוכחי" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okz-8U-Qoa">
-                        <rect key="frame" x="199.5" y="12.5" width="75.5" height="20.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okz-8U-Qoa">
+                        <rect key="frame" x="44" y="12" width="176" height="21"/>
+                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="CurentLocationIcon" translatesAutoresizingMaskIntoConstraints="NO" id="REn-ci-4XE">
-                        <rect key="frame" x="289" y="15" width="16" height="16"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CurentLocationIcon" translatesAutoresizingMaskIntoConstraints="NO" id="REn-ci-4XE">
+                        <rect key="frame" x="15" y="15" width="16" height="16"/>
+                        <animations/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="16" id="5Mi-0H-uwb"/>
+                        </constraints>
                     </imageView>
                 </subviews>
+                <animations/>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="okz-8U-Qoa" secondAttribute="trailing" constant="37" id="8e6-Im-lF0"/>
+                    <constraint firstItem="okz-8U-Qoa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="09Y-Fj-PFf"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="okz-8U-Qoa" secondAttribute="trailing" constant="92" id="4Wb-sH-viK"/>
+                    <constraint firstItem="REn-ci-4XE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="4rt-AE-g59"/>
                     <constraint firstAttribute="centerY" secondItem="REn-ci-4XE" secondAttribute="centerY" id="CF4-PV-qf5"/>
+                    <constraint firstItem="REn-ci-4XE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="NNz-df-J2R"/>
+                    <constraint firstItem="okz-8U-Qoa" firstAttribute="leading" secondItem="REn-ci-4XE" secondAttribute="trailing" constant="13" id="aLT-hM-oOv"/>
                     <constraint firstAttribute="centerY" secondItem="okz-8U-Qoa" secondAttribute="centerY" id="gnb-E3-mwd"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="REn-ci-4XE" secondAttribute="trailing" constant="7" id="p6A-b9-6Wc"/>
                 </constraints>
             </tableViewCellContentView>
+            <animations/>
             <point key="canvasLocation" x="353" y="355.5"/>
         </tableViewCell>
     </objects>
